# easy-ai18n

./: LICENSE  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: README.ja.md  README.zh.md
src/easy_ai18n/: __init__.py  config.py  error.py  log.py  main.py  utiles.py  utils.py
src/easy_ai18n/core/: __init__.py  builder.py  i18n.py  loader.py  parser.py
src/easy_ai18n/translator/: __init__.py  base.py  translator.py  utiles.py
tests/: test_i18n.py
tests/i18n/: en.yaml  ja.yaml
