[project]
name = "easy-ai18n"
version = "1.0.2"
description = "Simple and Elegant Python3 Internationalization (i18n) Tool"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "梓澪", email = "zilingmio@gmail.com" }
]
dependencies = [
    "googletrans",
    "instructor",
    "loguru",
    "openai",
    "python-dotenv",
    "pyyaml",
    "tenacity",
    "tqdm",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
[project.urls]
Repository = "https://github.com/z-mio/easy-ai18n"
Issues = "https://github.com/z-mio/easy-ai18n/issues"

# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
